2.1
- Implements splashscreen
- Implements homescreen
- Includes testing package

2.0
- Implements a Flutter project to replace the old python script
- Basic project structure remains the same:
    Input: Post-game stats
    Processing: Logic to generate workouts based on stats.
    Output: Workout items
- Form Validation
- Workout Generation Service
- Workout Generation Popup

1.1
- Reorganized into class-based structure
- Added windowed GUI
- Dropdown menu for roles
- Checkbox for MVP status
- Input boxes for numeric values
- Large text box for output display
- Scrollbar
- Buttons for Generating Workout and Resetting Form
- Disclaimer label
- Tooltips
- Better overall styling

1.0
- Collects user inputs for role, MVP status, and game stats.
- Takes game stats and role as input, then generates a list of workout suggestions
- Includes different workout types: push-ups, squats, planks, lunges, knee-ups, and jumping jacks.
- Basic input validation and error-handling
- 50% shitpost, 100% increase to log carrying potential