@@ -2,6 +2,7 @@
 - Implements splashscreen
 - Implements homescreen
 - Includes testing package
+- Added setting to save name and role for future API integration
 
 2.0
 - Implements a Flutter project to replace the old python script
